--- a/Ecommerce_Application/Views/Product/Details.cshtml
+++ b/Ecommerce_Application/Views/Product/Details.cshtml
@@ -24,7 +24,7 @@
     </header>
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="p-4 border bg-white shadow-sm d-flex rounded-3" style="width: 90%">
-            <img src="@Model.Product.imgUrl" class="img-fluid" style="max-height: 500px" />
+            <img src="@Model.Product.ImgFullUrl" class="img-fluid" style="max-height: 500px" />
             <div class="d-flex justify-content-center align-items-center flex-grow-1">
                 <table>
                     <tr>
