--- a/Ecommerce_Application/Views/Shared/_AdminLayout.cshtml
+++ b/Ecommerce_Application/Views/Shared/_AdminLayout.cshtml
@@ -39,7 +39,7 @@
 
 
     <script src="~/Scripts/jquery-3.7.0.min.js"></script>
-    <script src="~/Scripts/App/Dashboard.js"></script>
+    <script src="~/Scripts/App/Dashboard.js?v=2.0"></script>
     <script src="~/Scripts/bootstrap.bundle.min.js"></script>
 </body>
 </html>
