--- a/Ecommerce_Application/Views/Shared/_CartItems.cshtml
+++ b/Ecommerce_Application/Views/Shared/_CartItems.cshtml
@@ -11,7 +11,7 @@
         @foreach (var item in Model)
         {
             <div class="w-100 rounded-4 d-flex mb-2 pe-2" style="height: 150px; background-color: white">
-                <img src=@item.ProductImg class="img-fluid" style="height: 150px; width: 150px; border-start-start-radius: 1rem; border-end-start-radius: 1rem" />
+                <img src=@item.ImgFullUrl class="img-fluid" style="height: 150px; width: 150px; border-start-start-radius: 1rem; border-end-start-radius: 1rem" />
                 <table class="ms-3">
                     <tr>
                         <td>
