--- a/Ecommerce_Application/Views/Admin/_Dashboard.cshtml
+++ b/Ecommerce_Application/Views/Admin/_Dashboard.cshtml
@@ -61,5 +61,10 @@
     </div>
 </section>
 
+<div id="loadingSpinnerSales" style="display:none; position:fixed; top:50%; left:50%; transform:translate(-50%, -50%); z-index:9999;">
+    <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;">
+    </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="~/Scripts/App/SalesDashboard.js?v=1.0"></script>
+<script src="@Url.Content("~/Scripts/App/SalesDashboard.js?v=3.4")"></script>
